src/objects/PP_FAQ_QA__c.object
<CustomObject>
    <description>-- For storing QA related to paystub.</description>
    <fields>
        <fullName>PP_Answer__c</fullName>
        <label>PP Answer</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PP_FAQ_SubCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PP FAQ SubCategory</label>
        <referenceTo>PP_FAQ_SubCategory__c</referenceTo>
        <relationshipName>PP_FAQ_QA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PP_Question__c</fullName>
        <label>PP Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SINumber__c</fullName>
        <label>SI #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FAQ Q&amp;A</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SINumber__c</columns>
        <columns>PP_FAQ_SubCategory__c</columns>
        <columns>PP_Question__c</columns>
        <columns>PP_Answer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>FAQ QA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAQ Q&amp;A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>